# foldfusion

./: .gitignore  AGENTS.md  Makefile  README.md  config.toml  create_database.sh  example_run.sh  main.py  pipeline.py  pyproject.toml  setup.py  uniprot_ids.txt
evaluation/: analysis.ipynb  analysis.py
evaluation/alphafill_meta_data/: get_alphafill_meta_data.py
evaluation/benchmark_dataset/: build_eval_bins.py
evaluation/data/: 1_build_eval_bins.py  2_generate_foldfusion_input.py  3_get_alphafill_meta_data.py  benchmark_dataset.json  benchmark_dataset_uniprots.txt  build_benchmark_dataset.py  evaluation_bins.json  problematic_uniprot_ids.txt
evaluation/data/alphafill/: A0A2R2JFI5.json  A0R6D0.json  A4YI89.json  A5GZW8.json  A7M6E7.json  B8NJH3.json  D3RVD4.json  L0DSL2.json  O02697.json  O15118.json  O28126.json  O28480.json  O28524.json  O29998.json  O43314.json  O50606.json  O57809.json  O59147.json  O64411.json  O64989.json  O66841.json  O67135.json  O74237.json  O96693.json  P00044.json  P00045.json  P00078.json  P00094.json  P00127.json  P00132.json  P00138.json  P00163.json  P00257.json  P00260.json  P00268.json  P00322.json  P00323.json  P00327.json  P00338.json  P00374.json  (+288 more)
evaluation/data/foldfusion_input/: uniprot_ids.txt
foldfusion/: __init__.py  foldfusion.py  main.py
foldfusion/evaluation/: __init__.py  evaluator.py  utils.py  visualizer.py
foldfusion/quality/: clash_scorer.py
foldfusion/tools/: __init__.py  alphafoldfetcher.py  dogsite3.py  jamda_scorer.py  ligand_extractor.py  siena.py  siena_db.py  tool.py
foldfusion/utils/: __init__.py  config.py  logger.py  read_config.py
pipeline/: fetchers.py  steps.py  utils.py
scripts/: evaluation.json  evaluation_visualisations.py  rsyncPBD.sh
tests/data/Dogsite3/: output_P_1_res.edf
tests/data/JamdaScorer/3UI7/: C1L_A_1.sdf  C1L_B_1.sdf  MG_A_771.sdf  MG_B_771.sdf  ZN_A_772.sdf  ZN_B_772.sdf
tests/data/JamdaScorer/5AXP/: 4LK_A_1003.sdf  4LK_B_1003.sdf  MG_A_1001.sdf  MG_B_1001.sdf  ZN_A_1002.sdf  ZN_B_1002.sdf
tests/data/JamdaScorer/5SK9/: KD4_A_803.sdf  MG_A_802.sdf  ZN_A_801.sdf
tests/data/JamdaScorer/6IJI/: AEL_B_803.sdf  MG_B_802.sdf  ZN_B_801.sdf
tests/data/Siena/: alignment.txt  resultStatistic.csv
thesis/: README  main.bbl  main.tex  references.bib
thesis/chapters/: 01_introduction.aux  01_introduction.tex  02_methods.aux  02_methods.tex  03_results.aux  03_results.tex  04_conclusion.aux  04_conclusion.tex
thesis/figures/: foldfusion_pipeline_overview.mmd  pipeline_overview  pipeline_overview.drawio  pipeline_overview.mmd
thesis/presentations/2025-05-19/: draft.txt  slides.tex
thesis/presentations/2025-07-21/: slides.tex
thesis/thesis/: main.tex  master.cls  references.bib
thesis/thesis/chapters/: 01_introduction.tex  02_methods.tex  03_results.tex
(+39 files in other folders)
